--- a/package.json
+++ b/package.json
@@ -22,10 +22,16 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
-    }
+          }
   },
-
+  "lint-staged": {
+    "*.{js,css,json,md}": [
+      "prettier --write"
+    ],
+    "*.js": [
+      "eslint --fix"
+    ]
+  },
   "dependencies": {
     "animejs": "^3.1.0",
     "babel-plugin-styled-components": "^1.10.6",
